service/k3s/templates/flannel.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: kube-flannel-ds-amd64
    namespace: kube-system
    labels:
        tier: node
        app: flannel
spec:
    selector:
        matchLabels:
            app: flannel
    template:
        metadata:
            labels:
                tier: node
                app: flannel
        spec:
            affinity:
                nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        nodeSelectorTerms:
                            - matchExpressions:
                                  - key: kubernetes.io/os
                                    operator: In
                                    values:
                                        - linux
                                  - key: kubernetes.io/arch
                                    operator: In
                                    values:
                                        - amd64
            hostNetwork: true
            tolerations:
                - operator: Exists
                  effect: NoSchedule
            serviceAccountName: flannel
            containers:
                - name: kube-flannel
                  image: quay.io/coreos/flannel:v0.12.0-amd64
                  command:
                      - /opt/bin/flanneld
                  args:
                      - --ip-masq=false
                      - --kube-subnet-mgr
                      - --iface=${interface}
                  resources:
                      requests:
                          cpu: 50m
                          memory: 50Mi
                      limits:
                          cpu: 50m
                          memory: 50Mi
                  securityContext:
                      privileged: false
                      capabilities:
                          add: [NET_ADMIN]
                  volumeMounts:
                      - name: run
                        mountPath: /run/flannel
                      - name: flannel-cfg
                        mountPath: /etc/kube-flannel/
            volumes:
                - name: run
                  hostPath:
                      path: /run/flannel
                - name: cni
                  hostPath:
                      path: /etc/cni/net.d
                - name: flannel-cfg
                  configMap:
                      name: kube-flannel-cfg
---
...
