service/k3s/templates/argocd-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: argocd-server-ingress
    namespace: argocd
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`argo.${domain}`)
          kind: Rule
          services:
              - name: latest-argocd-server
                port: 80
    tls:
        secretName: argocd
