service/k3s/templates/basic-traefik-test.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    namespace: default
spec:
    routes:
        - match: Host(`dash.${domain}`)
          kind: Rule
          services:
              - name: api@internal
                kind: TraefikService
    tls:
        secretName: live-http01-cert
